<resources>
    <string name="app_name">DodawanieGra</string>
    <string name="mock_time_remaining">     </string>
    <string name="mock_current_addition">     </string>
    <string name="mock_correct_incorrect_ratio">0/0</string>
    <string name="seconds_suffix">sec</string>
    <string name="button_start">START</string>
    <string name="mock_number">12</string>
    <string name="answer_correct">Correct!</string>
    <string name="answer_incorrect">Incorrect!</string>
    <string name="button_restart">Play again?</string>
</resources>